force-app/main/default/objects/Recruitment_Message__e/Recruitment_Message__e.object-meta.xml
<CustomObject>
    <description>Real-time recruitment message and typing notification stream.</description>
    <label>Recruitment Message</label>
    <pluralLabel>Recruitment Messages</pluralLabel>
</CustomObject>