force-app/main/default/objects/Recruitment_Message__e/fields/Is_Typing__c.field-meta.xml
<CustomField>
    <fullName>Is_Typing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Typing</label>
    <type>Checkbox</type>
</CustomField>