force-app/main/default/objects/Recruitment_Message__e/fields/Sender_Name__c.field-meta.xml
<CustomField>
    <fullName>Sender_Name__c</fullName>
    <label>Sender Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>